refactor : Remove multiple same hobby result as query